--- a/config.yaml
+++ b/config.yaml
@@ -9,4 +9,4 @@ credentials:
       failed_login_attempts: 0
       logged_in: false
       name: Administrator
-      password: mnp2025
+      password: mnp@2025
